--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EACR Confrance</title>
+    <title>EACR Confrence</title>
     
     <!-- Favicon for search engines -->
     <link rel="icon" type="image/x-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgX9rhgPtuooaGs_nb76bjyyvT8xkUUuvkwbxG3YjZorCEXP1suduZp7b9Q3pv4qbaa3NwL5vnjVYRYxHGF7im6ABCwP-IL0wAHkyVTHBB2A0xoCMSDsNRDpKjmcmNnTw2DT8d7FQ0zvzXNr0XmOaX95M8uvmeKWGrNVtVvP6Z-0fjIxKIlDueLHkJrNB5g/s1150/1021.jpg">
@@ -1561,7 +1561,7 @@
                 <div class="logo" id="logo">
                     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgX9rhgPtuooaGs_nb76bjyyvT8xkUUuvkwbxG3YjZorCEXP1suduZp7b9Q3pv4qbaa3NwL5vnjVYRYxHGF7im6ABCwP-IL0wAHkyVTHBB2A0xoCMSDsNRDpKjmcmNnTw2DT8d7FQ0zvzXNr0XmOaX95M8uvmeKWGrNVtVvP6Z-0fjIxKIlDueLHkJrNB5g/s1150/1021.jpg" alt="Logo" class="logo-img">
                     <div class="logo-text">
-                        <h1 class="logo-title">EACR Confrance</h1>
+                        <h1 class="logo-title">EACR Confrence</h1>
                         <p class="logo-subtitle">أ.د. محمد لبيب سالم</p>
                     </div>
                     <div class="admin-counter" id="adminCounter"></div>
@@ -1583,7 +1583,7 @@
             <div class="sidebar-header">
                 <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgX9rhgPtuooaGs_nb76bjyyvT8xkUUuvkwbxG3YjZorCEXP1suduZp7b9Q3pv4qbaa3NwL5vnjVYRYxHGF7im6ABCwP-IL0wAHkyVTHBB2A0xoCMSDsNRDpKjmcmNnTw2DT8d7FQ0zvzXNr0XmOaX95M8uvmeKWGrNVtVvP6Z-0fjIxKIlDueLHkJrNB5g/s1150/1021.jpgl" alt="Logo" class="sidebar-logo-img">
                 <div class="sidebar-logo-text">
-                    <h2 class="sidebar-logo-title">EACR Confrance</h2>
+                    <h2 class="sidebar-logo-title">EACR Confrence</h2>
                     <p class="sidebar-logo-subtitle">أ.د. محمد لبيب سالم</p>
                 </div>
             </div>
