--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EACR Confrence</title>
+    <title>EACR Conefrence</title>
     
     <!-- Favicon for search engines -->
     <link rel="icon" type="image/x-icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgX9rhgPtuooaGs_nb76bjyyvT8xkUUuvkwbxG3YjZorCEXP1suduZp7b9Q3pv4qbaa3NwL5vnjVYRYxHGF7im6ABCwP-IL0wAHkyVTHBB2A0xoCMSDsNRDpKjmcmNnTw2DT8d7FQ0zvzXNr0XmOaX95M8uvmeKWGrNVtVvP6Z-0fjIxKIlDueLHkJrNB5g/s1150/1021.jpg">
@@ -1561,7 +1561,7 @@
                 <div class="logo" id="logo">
                     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgX9rhgPtuooaGs_nb76bjyyvT8xkUUuvkwbxG3YjZorCEXP1suduZp7b9Q3pv4qbaa3NwL5vnjVYRYxHGF7im6ABCwP-IL0wAHkyVTHBB2A0xoCMSDsNRDpKjmcmNnTw2DT8d7FQ0zvzXNr0XmOaX95M8uvmeKWGrNVtVvP6Z-0fjIxKIlDueLHkJrNB5g/s1150/1021.jpg" alt="Logo" class="logo-img">
                     <div class="logo-text">
-                        <h1 class="logo-title">EACR Confrence</h1>
+                        <h1 class="logo-title">EACR Conefrence</h1>
                         <p class="logo-subtitle">أ.د. محمد لبيب سالم</p>
                     </div>
                     <div class="admin-counter" id="adminCounter"></div>
@@ -1583,7 +1583,7 @@
             <div class="sidebar-header">
                 <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgX9rhgPtuooaGs_nb76bjyyvT8xkUUuvkwbxG3YjZorCEXP1suduZp7b9Q3pv4qbaa3NwL5vnjVYRYxHGF7im6ABCwP-IL0wAHkyVTHBB2A0xoCMSDsNRDpKjmcmNnTw2DT8d7FQ0zvzXNr0XmOaX95M8uvmeKWGrNVtVvP6Z-0fjIxKIlDueLHkJrNB5g/s1150/1021.jpgl" alt="Logo" class="sidebar-logo-img">
                 <div class="sidebar-logo-text">
-                    <h2 class="sidebar-logo-title">EACR Confrence</h2>
+                    <h2 class="sidebar-logo-title">EACR Conefrence</h2>
                     <p class="sidebar-logo-subtitle">أ.د. محمد لبيب سالم</p>
                 </div>
             </div>
@@ -1622,7 +1622,7 @@
                 </div>
             </div>
             <div class="sidebar-footer">
-                <p>© 2025 مؤتمر EACR Confrance. جميع الحقوق محفوظة.</p>
+                <p>© 2025 مؤتمر EACR Conefrence. جميع الحقوق محفوظة.</p>
             </div>
         </nav>
 
@@ -1634,7 +1634,7 @@
                 
                 <div class="welcome-banner">
                     <div class="welcome-text">
-                        <h3 class="welcome-title">Welcome To EACR Confrance</h3>
+                        <h3 class="welcome-title">Welcome To EACR Conefrence</h3>
                         <p class="welcome-subtitle">Towards a Better Future for Scientific Research in the Arab World</p>
                         <span class="conference-date">8 September 2025</span>
                     </div>
@@ -1691,6 +1691,9 @@
     </div>
     <div class="gallery-item">
       <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhtzHHkjFetTCi0c-CVRAGbQBONVJwt28h3LKxekhY-c3blPbA_IzDuOdFMkkNCHFcGWzkdKRXTvjI7kQyi8zrCVvWvxjKVImpFfoJzfNanC6KSuVh4EqH4T_QDfqPdgD1BFLJIdP7pznO9fm0wu43XdrUEAWuj8YiJCQxi-EByYIUrXStIU-mYwJ8ow5b2/s1025/1557.jpg" alt="صورة 3" class="gallery-img">
+    </div>
+        <div class="gallery-item">
+      <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi9EOLch1leGa-RXRtjWzp4R_66K27XZOS3Mje0lhPsRA_sAm_62zOQw__IGvFL_alPkin8TIZw7YPlCMHh-nA0mawizTljmPQmRmORnPXg3RT_dLr0vV9tMdRqW9RGBbt8xuMs1gPNgXU3SqQ-nekAMMgTZaolyXLdUHnR1zEoYukcsKrZKl0GppfG3W6T/s1280/5197.jpg" alt="صورة 4" class="gallery-img">
     </div>
     <div class="gallery-item">
       <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjbE6qAP5jWxXy1i8mqk8GZtNvoOmc8rs5YP961ElazUfOKerQHt0K3FvNLaNCchs_1OnvJvLl9-4ZexzJcHNMnr4ne3_ZtNeGlCbEmTdxy1F1HnZnjdRltNJsRu8M6_zbo3vipZw0fgQCCnQF-LGf4XyFvd_rP9Ipb8T0-gRp7d2LaU3vfrBtYrKl444gQ/s1020/1558.jpg" alt="صورة 4" class="gallery-img">
@@ -2683,7 +2686,7 @@ document.addEventListener('DOMContentLoaded', function() {
                                     <p class="card-desc">${value.description}</p>
                                     <div class="card-footer">
                                         <span class="card-date">${new Date().toLocaleDateString('ar-SA')}</span>
-                                        <a href="https://eacr-confrance.github.io/New" class="card-link">more<i class="fas fa-arrow-left"></i></a>
+                                        <a href="https://eacr-confrence.github.io/New" class="card-link">more<i class="fas fa-arrow-left"></i></a>
                                     </div>
                                 </div>
                             `;
